fixed some small-screen css layout issues on kanji details page

--- a/frontend/public/less/views/kanji.less
+++ b/frontend/public/less/views/kanji.less
@@ -1,5 +1,10 @@
 @import "../base.less";
 
+.big-character-container {
+  min-width: 160px;
+  margin-bottom: 40px;
+}
+
 .big-character {
   padding: 0.1em;
   border: solid 1px #333;
